  . Fixed bug #72159 (Imported Class Overrides Local Class Name). (Nikita)

- Curl:
  . Fixed bug #68658 (Define CURLE_SSL_CACERT_BADFILE). (Pierrick)

- DBA:
  . Fixed bug #72157 (use-after-free caused by dba_open). (Shm, Laruence)

- JSON:
  . Fixed bug #72069 (Behavior \JsonSerializable different from json_encode).
    (Laruence)

- OCI8:
  . Fixed bug #71600 (oci_fetch_all segfaults when selecting more than eight
    columns). (Tian Yang)

- PCNTL:
  . Fixed bug #72154 (pcntl_wait/pcntl_waitpid array internal structure
    overwrite). (Laruence)

- Opcache:
  . Fixed bug #72014 (Including a file with anonymous classes multiple times
    leads to fatal error). (Laruence)

- POSIX:
  . Fixed bug #72133 (php_posix_group_to_array crashes if gr_passwd is NULL).
    (esminis at esminis dot lt)

- Postgres:
  . Fixed bug #72028 (pg_query_params(): NULL converts to empty string).
    (Laruence)
  . Fixed bug #71062 (pg_convert() doesn't accept ISO 8601 for datatype
    timestamp). (denver at timothy dot io)

- Session:
  . Fixed bug #71972 (Cyclic references causing session_start(): Failed to
    decode session object). (Laruence)

- Sockets:
  . Added socket_export_stream() function for getting a stream compatible
    resource from a socket resource. (Chris Wright, Bob)

- SPL:
  . Fixed bug #72051 (The reference in CallbackFilterIterator doesn't work as
    expected). (Laruence)

- SQLite3:
  . Fixed bug #68849 (bindValue is not using the right data type). (Anatol)

- Standard:
  . Fixed bug #72075 (Referencing socket resources breaks stream_select).
    (Laruence)
  . Fixed bug #72031 (array_column() against an array of objects discards all
    values matching null). (Nikita)

28 Apr 2016 PHP 7.0.6

- Core:
  . Fixed bug #71930 (_zval_dtor_func: Assertion `(arr)->gc.refcount <= 1'
    failed). (Laruence)
  . Fixed bug #71922 (Crash on assert(new class{})). (Nikita)
  . Fixed bug #71914 (Reference is lost in "switch"). (Laruence)